--- a/fly.toml
+++ b/fly.toml
@@ -1,12 +1,23 @@
-# fly.toml app configuration file generated for spring-balancing on 2024-05-06T14:58:24+03:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+# See https://fly.io/docs/reference/configuration/
+# for information about how to use this file.
 
-app = 'spring-balancing'
-primary_region = 'arn'
+app = "balancing-app"
+kill_signal = "SIGINT"
+kill_timeout = 5
+primary_region = "arn"
+
+[experimental]
+  auto_rollback = true
+  private_network = true
 
 [build]
+  dockerfile = "./Dockerfile"
+
+[env]
+  CODER_ACCESS_URL = "https://balancing-app.fly.dev"
+  CODER_HTTP_ADDRESS = "0.0.0.0:3000"
+  CODER_VERBOSE = "true"
+  CODER_TELEMETRY_INSTALL_SOURCE = "fly.io"
 
 [http_service]
   internal_port = 8080
@@ -15,6 +26,7 @@ primary_region = 'arn'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
+
 
 [[vm]]
   memory = '1gb'
