--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,11 @@
 server:
-  port: 8181
+  port: 8080
 
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:15432/balancing
-    username: root
-    password: passwords
+#  datasource:
+#    url: jdbc:postgresql://127.0.0.1:5432/balancing
+#    username: root
+#    password: passwords
   jpa:
     hibernate:
       ddl-auto: update
