--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -20,7 +20,7 @@ services:
   webapp:
     container_name: balancing-app
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     ports:
       - '8080:8080'
