--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-logging'
+    implementation 'ch.qos.logback:logback-classic'
 
     implementation group: 'org.springdoc',
             name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
@@ -35,9 +37,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'ch.qos.logback:logback-classic:1.5.6'
-    implementation 'org.slf4j:slf4j-api:1.7.30'
-    implementation 'org.springframework.boot:spring-boot-starter-logging'
+//    implementation 'ch.qos.logback:logback-classic:1.5.6'
+//    implementation 'org.slf4j:slf4j-api:1.7.30'
+//    implementation 'org.springframework.boot:spring-boot-starter-logging'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
