--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-logging'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'ch.qos.logback:logback-classic'
 
     implementation group: 'org.springdoc',
@@ -36,10 +37,6 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-//    implementation 'ch.qos.logback:logback-classic:1.5.6'
-//    implementation 'org.slf4j:slf4j-api:1.7.30'
-//    implementation 'org.springframework.boot:spring-boot-starter-logging'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
